ocp/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: ocp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: liumin/api-gateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: ocp
spec:
  type: 
  selector:
    app: api-gateway
  ports:
  - port: 9200
    targetPort: 9200
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-gateway
  namespace: ocp
spec:
  rules:
  - host: api-gateway.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: api-gateway
          servicePort: 9200
